# Curso_Python

./: .git-commit-message.txt  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  FINAL_SUMMARY.md  MAINTENANCE_SUMMARY.md  ORGANIZATION_COMPLETE.md  PROGRESS_FIX.md  README.md  ROADMAP_IMPLEMENTATION.md  SUMMARY.md  compras.txt  convert_git_course.py  pyproject.toml  requirements.txt
.agent/rules/: organizacao-solid-dry.md
.agent/workflows/: fluxo-1.md  spec-driven-development.md
.kiro/steering/: product.md  structure.md
docs/: ARCHITECTURE_OVERVIEW.md  DOCUMENTATION_STANDARDS.md  INDEX.md  ROADMAP_SYSTEM.md
docs/git-course/: cheat-sheet.md
docs/guides/: GUIDE_UV_SETUP.md  MIGRATION_USER_PROGRESS.md
docs/implementation/: EXERCISE_IMPROVEMENTS.md  FINAL_SUMMARY.md  ROADMAP_IMPLEMENTATION.md  SUMMARY.md
docs/maintenance/: DOCUMENTATION_CLEANUP_2025_12_08.md  ROLLBACK_NOTES.md
docs/refactoring/: LEGACY_ROUTE_REMOVAL.md  REFACTOR_ACHIEVEMENTS_SOLID_DRY.md  REFACTOR_APP_ROUTES.md  REFACTOR_PROGRESS_MANAGER.md
docs/templates/: design.template.md  requirements.template.md  tasks.template.md
examples/: migrate_progress_example.py
projects/: achievement_manager.py  app.py  condition_evaluator.py  condition_validator.py  content_analyzer.py  content_renderer.py  data_migration.py  progress_manager.py  test_achievements_e2e.py
projects/data/: achievements.json  courses.json  user_progress.json
projects/templates/: achievements.html  base.html  code_editor.html  course_detail.html  course_list.html  course_roadmap.html  courses.html  exercise_editor.html  index.html  lesson_detail.html
projects/testes/: conftest.py  (+8 more)
scripts/: migrate_user_progress.sh
(+34 files in other folders)
